--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "stellarchy-app",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "bignumber.js": "^9.1.1",
-    "next": "^13.4.0",
-    "polished": "^4.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-tabs": "^6.0.2",
-    "rebass": "^4.0.7",
-    "styled-components": "^6.0.5",
-    "viem": "~0.3.36",
-    "wagmi": "^1.0.6"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^12.1.6",
-    "typescript": "^5.0.4"
-  }
+    "name": "stellarchy-app",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "axios": "^1.4.0",
+        "bignumber.js": "^9.1.1",
+        "next": "^13.4.0",
+        "polished": "^4.2.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-tabs": "^6.0.2",
+        "rebass": "^4.0.7",
+        "rebass-next": "^2.0.2",
+        "styled-components": "^6.0.5",
+        "viem": "~0.3.36",
+        "wagmi": "^1.0.6"
+    },
+    "devDependencies": {
+        "@types/node": "^17.0.31",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.3",
+        "@types/rebass": "^4.0.10",
+        "babel-plugin-styled-components": "^2.1.4",
+        "eslint": "^8.15.0",
+        "eslint-config-next": "^12.1.6",
+        "typescript": "^5.0.4"
+    },
+    "resolutions": {
+        "styled-components": "^5"
+    }
 }
