--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "axios": "^1.4.0",
         "bignumber.js": "^9.1.1",
+        "lokijs": "^1.5.12",
         "next": "^13.4.0",
+        "pino-pretty": "^10.2.0",
         "polished": "^4.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
