--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.5",
+        "@mui/icons-material": "^5.14.1",
+        "@mui/material": "^5.14.2",
         "axios": "^1.4.0",
         "bignumber.js": "^9.1.1",
         "lokijs": "^1.5.12",
