--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.3",
         "@types/rebass": "^4.0.10",
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "@typescript-eslint/parser": "^6.2.0",
         "babel-plugin-styled-components": "^2.1.4",
-        "eslint": "^8.15.0",
+        "eslint": "^8.45.0",
         "eslint-config-next": "^12.1.6",
-        "typescript": "^5.0.4"
+        "typescript": "^5.1.6"
     },
     "resolutions": {
         "styled-components": "^5"
