--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emotion/styled": "^11.11.0",
         "@fontsource/roboto": "^5.0.5",
         "@mui/icons-material": "^5.14.1",
+        "@mui/joy": "^5.0.0-alpha.89",
         "@mui/material": "^5.14.2",
         "axios": "^1.4.0",
         "bignumber.js": "^9.1.1",
